# ObjViewer

./: .gitignore  .gitmodules  Cargo.toml
app/: Cargo.toml
app/src/: lib.rs
core/: Cargo.toml
core/src/: gpu_init.rs  lib.rs  platform.rs  render_context.rs  view_port.rs
core/src/game/: camera.rs  mod.rs  physics.rs  physics_manager.rs  render.rs  render_manager.rs  transform.rs
core/src/graphics/: material.rs  mesh.rs  mod.rs  shader.rs  shader_paths.rs  source.rs  texture.rs  types.rs  vertex.rs
core/src/objects/: cube.rs  light.rs  triangle.rs
native/: Cargo.toml
native/src/: context.rs  main.rs
render_derive/: Cargo.toml
resources/shaders/: light_cube.wgsl  loaded_obj.wgsl
resources/shaders/native/: default.frag  default.vert  light_cube.vert  loaded_obj.frag  loaded_obj.vert
resources/shaders/web/: default.frag  default.vert  light_cube.frag  light_cube.vert  loaded_obj.frag  loaded_obj.vert
shaders/: default.frag  default.vert  light_cube.frag  light_cube.vert  loaded_obj.frag  loaded_obj.vert
src/: lib.rs  main.rs
src/game/: camera.rs  mod.rs  physics.rs  physics_manager.rs  render.rs  render_manager.rs  transform.rs
src/game/render/: material.rs  mesh.rs
src/graphics/: material.rs  mesh.rs  mod.rs  object_renderer.rs  render.rs  shader.rs  source.rs  texture.rs  vertex.rs
src/graphics/render/: material.rs  mesh.rs
src/objects/: cube.rs  light.rs  mod.rs  triangle.rs
src/window/: mod.rs  view_port.rs
transform_derive/: Cargo.toml
transform_derive/src/: lib.rs
wasm/: Cargo.toml  build.sh  index.html  package-lock.json  package.json
wasm/src/: context.rs  lib.rs
