[package]
name = "limited-gl"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
glam = { version = "0.30.10", features = ["bytemuck"] }
glow = "0.16.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"

raw-window-handle = "0.6.2"
winit = { version = "0.30.12", features = ["rwh_06"] }
winit_input_helper = "0.17.0"

time = { version = "0.3.44", features = ["formatting", "local-offset"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["time"] }
log = "0.4.29"
