[workspace]
members = ["app", "core", "native", "wasm"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/The24Kings/ObjViewer"

[workspace.dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
glam = { version = "0.30.10", features = ["bytemuck"] }
wgpu = "28.0"
pollster = "0.4"

winit = { version = "0.30.12", features = ["rwh_06"] }
winit_input_helper = "0.17.0"

time = { version = "0.3.44", features = ["formatting", "local-offset"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["time"] }
log = "0.4.29"
image = "0.25.9"

dear-imgui-rs = { version = "0.9.0", features = ["glam"] }
dear-imgui-winit = "0.9.0"
dear-imgui-wgpu = "0.9.0"
