[package]
name = "core"
description = "Core app functionality and rendering code"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
glow.workspace = true
glam.workspace = true
image.workspace = true
winit.workspace = true
winit_input_helper.workspace = true
tracing.workspace = true
log.workspace = true

bytemuck = "1.24.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dear-imgui-rs.workspace = true
dear-imgui-winit.workspace = true
dear-imgui-glow.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1.0"
