[package]
name = "core"
description = "Core app functionality and rendering code"
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
wgpu.workspace = true
glam.workspace = true
image.workspace = true
winit.workspace = true
winit_input_helper.workspace = true
tracing.workspace = true
log.workspace = true

bytemuck = { version = "1.24.0", features = ["derive"] }

dear-imgui-rs.workspace = true
dear-imgui-winit.workspace = true
dear-imgui-wgpu.workspace = true

web-time = "1.1.0"
