[package]
name = "native"
description = "Window code for running on Windows, Linux, etc."
version = "0.1.0"
edition.workspace = true
repository.workspace = true

[dependencies]
app = { path = "../app" }
core = { path = "../core" }

wgpu.workspace = true
pollster.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
winit.workspace = true
winit_input_helper.workspace = true
log.workspace = true

dear-imgui-rs.workspace = true
dear-imgui-winit.workspace = true
dear-imgui-wgpu.workspace = true
